[package]
name = "crdt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automerge = "0.5.9"
autosurgeon = { version = "0.8.3", features = ["uuid"] }
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive"] }
libp2p = "0.53.2"
sqlite = "0.35.0"
tokio = { version = "1", features = ["full"] }
uhlc = "0.7.0"
uuid = { version = "1.8.0", features = ["v4"] }
