[package]
name = "crdt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automerge = "0.5.9"
autosurgeon = { version = "0.8.3", features = ["uuid"] }
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive"] }
sqlite = "0.35.0"
tokio = { version = "1", features = ["full"] }
uhlc = "0.7.0"
uuid = { version = "1.8.0", features = ["v4"] }
libp2p = { version = "0.53.2", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "macros",
    "tcp",
    "yamux",
    "quic",
] }
libp2p-stream = "0.1.0-alpha"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"